@@ -900,7 +900,7 @@ static OP_FUNC_TYPE func_CLR (int rd, int rr)
 }
 
 /* 0010 11rd dddd rrrr | MOV */
-static INLINE OP_FUNC_TYPE func_MOV (int rd, int rr)
+static OP_FUNC_TYPE func_MOV (int rd, int rr)
 {
   put_reg (rd, get_reg (rr));
 }
@@ -1190,7 +1190,7 @@ static OP_FUNC_TYPE func_CPI (int rd, int rr)
 }
 
 /* 1110 KKKK dddd KKKK | LDI or SER */
-static INLINE OP_FUNC_TYPE func_LDI (int rd, int rr)
+static OP_FUNC_TYPE func_LDI (int rd, int rr)
 {
   put_reg (rd, rr);
 }
@@ -1442,7 +1442,7 @@ static OP_FUNC_TYPE func_RCALL (int rd, int rr)
 
 /* opcodes with two 4-bit register (Rd and Rr) operands */
 /* 0000 0001 dddd rrrr | MOVW */
-static INLINE OP_FUNC_TYPE func_MOVW (int rd, int rr)
+static OP_FUNC_TYPE func_MOVW (int rd, int rr)
 {
 #ifdef AVRTEST_LOG
   put_word_reg (rd, get_word_reg (rr));
